Projekt/kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api(?:/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: api-server
                port:
                  number: 18292
          - path: /keycloak(?:/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: web-client-server
                port:
                  number: 80
